bug(thumbnails): stack thumbnails on smaller screen sizes
Finishes

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -102,10 +102,10 @@ html {
     border: 4px solid white;
 }
 .thumbnail:hover{
-   border: 4px solid dodgerblue;
+   border: 2px solid dodgerblue;
    -moz-box-shadow: 5px 5px 0px #999;
     -webkit-box-shadow: 5px 5px 0px #999;
-    box-shadow: 2px 2px 2px #999;
+    box-shadow: 3px 3px 3px #999;
 }
 
 .user-name:hover:first-of-type {
